* Fix: Margin and alignment option not working for widget ads

--- a/assets/css/chosen.css
+++ b/assets/css/chosen.css
@@ -225,7 +225,7 @@
   height: 15px;
   outline: 0;
   border: 0 !important;
-  background: transparent !important;
+  /*background: transparent !important;*/
   box-shadow: none;
   color: #666;
   font-size: 100%;
